@@ -1,3 +1,9 @@
+2006-11-11  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Test.Rules.Concurrency.mdp: Add new tests to MonoDevelop project.
+	* WriteStaticFieldFromInstanceMethodTest.cs: New. Unit tests for the
+	new WriteStaticFieldFromInstanceMethodRule rule.
+
 2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.
